--- a/estilo.css
+++ b/estilo.css
@@ -1,11 +1,11 @@
 body {
-	background-color: white;
+	background-color: yellow;
 	font-family: sans-serif;
 }
 
 #cabecalho { 
     border: black 1px solid; 
-    background-color: grey; 
+    background-color: yellow; 
 	text-align: center;
 	font-size: 30px;
 }
